tests/spec/emit/snapshots/unit_call_as_err_constructor_arg.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  fn noop() {}
  
  fn test() -> Result<int, ()> {
    Err(noop())
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func noop() {}

func test() lisette.Result[int, struct{}] {
	noop()
	return lisette.MakeResultErr[int, struct{}](struct{}{})
}
