tests/spec/emit/snapshots/unit_call_as_function_argument.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  fn noop() {}
  fn take(_x: ()) {}
  
  fn test() {
    take(noop())
  }
---
package main

func noop() {}

func take(_ struct{}) {}

func test() {
	noop()
	take(struct{}{})
}
