tests/spec/emit/snapshots/unit_call_in_assert_type.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn noop() {}
  
  fn main() {
    let x = assert_type<int>(noop())
    let _ = x
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func noop() {}

func main() {
	noop()
	x := lisette.AssertType[int](struct{}{})
	_ = x
}
