tests/spec/emit/snapshots/unit_call_in_binary_equality.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn noop() {}
  
  fn test() {
    let b = noop() == ()
    let _ = b
  }
---
package main

func noop() {}

func test() {
	noop()
}
