tests/spec/emit/snapshots/unit_call_in_channel_send.snap
---
source: tests/spec/emit/concurrency.rs
description: |
  
  fn noop() {}
  
  fn test() {
    let ch = Channel.buffered<()>(1)
    ch.send(noop())
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func noop() {}

func test() {
	ch := make(chan struct{}, 1)
	noop()
	lisette.ChannelSend(ch, struct{}{})
}
