tests/spec/emit/snapshots/unit_call_in_format_string.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn noop() {}
  
  fn test() -> string {
    f"x:{noop()}"
  }
---
package main

import "fmt"

func noop() {}

func test() string {
	noop()
	return fmt.Sprintf("x:%v", struct{}{})
}
