tests/spec/emit/snapshots/unit_call_in_identifier_native_append.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn noop() {}
  
  fn main() {
    let xs: Slice<()> = []
    let y = Slice.append(xs, noop())
    let _ = y
  }
---
package main

func noop() {}

func main() {
	xs := []struct{}{}
	noop()
	y := append(xs[:len(xs):len(xs)], struct{}{})
	_ = y
}
